--- a/app/src/main/res/layout/fragment_nok_add.xml
+++ b/app/src/main/res/layout/fragment_nok_add.xml
@@ -25,6 +25,243 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    android:id="@+id/stepperView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/step1"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:fontFamily="sans-serif-black"
+                                android:text="1"
+                                android:textSize="10dp"
+                                android:gravity="center"
+                                android:background="@drawable/roundshapebtn"
+                                android:layout_marginLeft="25sp"
+                                android:layout_marginRight="2sp"
+                                android:layout_marginTop="0sp" />
+
+                            <View
+                                android:layout_width="20dp"
+                                android:layout_height="2dp"
+                                android:background="#787878"
+                                android:layout_marginTop="13dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginLeft="5dp"/>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/steplbl1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-black"
+                            android:textAlignment="center"
+                            android:layout_marginLeft="5sp"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginTop="8sp"
+                            android:text="New patient details"
+                            app:layout_constraintTop_toBottomOf="@id/step1"
+                            android:textSize="8dp"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/step2"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:fontFamily="sans-serif-black"
+                                android:text="2"
+                                android:textSize="10dp"
+                                android:gravity="center"
+                                android:background="@drawable/roundshapeseletebtn"
+                                android:layout_marginLeft="5sp"
+                                android:layout_marginRight="2sp"
+                                android:layout_marginTop="0sp" />
+
+                            <View
+                                android:layout_width="15dp"
+                                android:layout_height="2dp"
+                                android:background="#787878"
+                                android:layout_marginTop="13dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginLeft="5dp"/>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/steplbl2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-black"
+                            android:textAlignment="center"
+                            android:layout_marginLeft="0sp"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginTop="8sp"
+                            android:text="Next to Kin"
+                            app:layout_constraintTop_toBottomOf="@id/step1"
+                            android:textSize="8dp"/>
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/step3"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:fontFamily="sans-serif-black"
+                                android:text="3"
+                                android:textSize="10dp"
+                                android:gravity="center"
+                                android:background="@drawable/roundshapebtn"
+                                android:layout_marginLeft="5sp"
+                                android:layout_marginRight="2sp"
+                                android:layout_marginTop="0sp" />
+
+                            <View
+                                android:layout_width="15dp"
+                                android:layout_height="2dp"
+                                android:background="#787878"
+                                android:layout_marginTop="13dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginLeft="5dp"/>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/steplbl3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-black"
+                            android:textAlignment="center"
+                            android:layout_marginLeft="0sp"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginTop="8sp"
+                            android:text="Next to Kin+"
+                            app:layout_constraintTop_toBottomOf="@id/step1"
+                            android:textSize="8dp"/>
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/step4"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:fontFamily="sans-serif-black"
+                                android:text="4"
+                                android:textSize="10dp"
+                                android:gravity="center"
+                                android:background="@drawable/roundshapebtn"
+                                android:layout_marginLeft="5sp"
+                                android:layout_marginRight="2sp"
+                                android:layout_marginTop="0sp" />
+
+                            <View
+                                android:layout_width="15dp"
+                                android:layout_height="2dp"
+                                android:background="#787878"
+                                android:layout_marginTop="13dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginLeft="5dp"/>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/steplbl4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-black"
+                            android:textAlignment="center"
+                            android:layout_marginLeft="10sp"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginTop="8sp"
+                            android:text="Gp"
+                            app:layout_constraintTop_toBottomOf="@id/step1"
+                            android:textSize="8dp"/>
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/step5"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:fontFamily="sans-serif-black"
+                                android:text="5"
+                                android:textSize="10dp"
+                                android:gravity="center"
+                                android:background="@drawable/roundshapebtn"
+                                android:layout_marginLeft="5sp"
+                                android:layout_marginRight="2sp"
+                                android:layout_marginTop="0sp" />
+
+
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/steplbl5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-black"
+                            android:textAlignment="center"
+                            android:layout_marginLeft="10sp"
+                            android:layout_marginRight="2sp"
+                            android:layout_marginTop="8sp"
+                            android:text="Gp+"
+                            app:layout_constraintTop_toBottomOf="@id/step1"
+                            android:textSize="8dp"/>
+
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
                 <Button
                     android:id="@+id/nok_add_polygon_left"
                     android:layout_width="26dp"
@@ -34,7 +271,7 @@
                     android:background="@drawable/polygon_2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.784"
+                    app:layout_constraintHorizontal_bias="0.87"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.27" />
@@ -48,7 +285,7 @@
                     android:background="@drawable/polygon_1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.890"
+                    app:layout_constraintHorizontal_bias="0.97"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.27" />
