--- a/app/src/main/res/layout/fragment_patient_add.xml
+++ b/app/src/main/res/layout/fragment_patient_add.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.patient.PatientAddFragment">
+    <FrameLayout  android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <!-- Background ImageView -->
     <ImageView
         android:id="@+id/backgroundImage"
@@ -12,12 +15,286 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/background_logo" />
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="-16dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:id="@+id/stepperView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/step1"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="1"
+                    android:textSize="10dp"
+                    android:gravity="center"
+                    android:background="@drawable/roundshapeseletebtn"
+                    android:layout_marginLeft="25sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="0sp" />
+
+                    <View
+                        android:layout_width="20dp"
+                        android:layout_height="2dp"
+                        android:background="#787878"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/steplbl1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-black"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="5sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="8sp"
+                    android:text="New patient details"
+                    app:layout_constraintTop_toBottomOf="@id/step1"
+                    android:textSize="8dp"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/step2"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="2"
+                        android:textSize="10dp"
+                        android:gravity="center"
+                        android:background="@drawable/roundshapebtn"
+                        android:layout_marginLeft="5sp"
+                        android:layout_marginRight="2sp"
+                        android:layout_marginTop="0sp" />
+
+                    <View
+                        android:layout_width="15dp"
+                        android:layout_height="2dp"
+                        android:background="#787878"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/steplbl2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-black"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="0sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="8sp"
+                    android:text="Next to Kin"
+                    app:layout_constraintTop_toBottomOf="@id/step1"
+                    android:textSize="8dp"/>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/step3"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="3"
+                        android:textSize="10dp"
+                        android:gravity="center"
+                        android:background="@drawable/roundshapebtn"
+                        android:layout_marginLeft="5sp"
+                        android:layout_marginRight="2sp"
+                        android:layout_marginTop="0sp" />
+
+                    <View
+                        android:layout_width="15dp"
+                        android:layout_height="2dp"
+                        android:background="#787878"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/steplbl3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-black"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="0sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="8sp"
+                    android:text="Next to Kin+"
+                    app:layout_constraintTop_toBottomOf="@id/step1"
+                    android:textSize="8dp"/>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/step4"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="4"
+                        android:textSize="10dp"
+                        android:gravity="center"
+                        android:background="@drawable/roundshapebtn"
+                        android:layout_marginLeft="5sp"
+                        android:layout_marginRight="2sp"
+                        android:layout_marginTop="0sp" />
+
+                    <View
+                        android:layout_width="15dp"
+                        android:layout_height="2dp"
+                        android:background="#787878"
+                        android:layout_marginTop="13dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/steplbl4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-black"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="8sp"
+                    android:text="Gp"
+                    app:layout_constraintTop_toBottomOf="@id/step1"
+                    android:textSize="8dp"/>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/step5"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="5"
+                        android:textSize="10dp"
+                        android:gravity="center"
+                        android:background="@drawable/roundshapebtn"
+                        android:layout_marginLeft="5sp"
+                        android:layout_marginRight="2sp"
+                        android:layout_marginTop="0sp" />
+
+
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/steplbl5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif-black"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginTop="8sp"
+                    android:text="Gp+"
+                    app:layout_constraintTop_toBottomOf="@id/step1"
+                    android:textSize="8dp"/>
+
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <Button
+            android:id="@+id/gp_add_polygon_left"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/polygon_2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.87"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.27" />
+
+        <Button
+            android:id="@+id/gp_add_polygon_right"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/polygon_1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="0dp"
+            app:layout_constraintHorizontal_bias="0.97"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.27" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
         <TextView
@@ -229,3 +506,4 @@
 
     </LinearLayout>
 </FrameLayout>
+    </ScrollView>
