--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -7,6 +7,8 @@
     android:textAlignment="center">
 
 <!--test-->
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/headerCard"
         android:layout_width="match_parent"
@@ -16,6 +18,7 @@
         app:cardBackgroundColor="@color/TG_blue"
         app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,12 +32,12 @@
 
         <TextView
             android:id="@+id/username"
-            android:layout_width="wrap_content"
+            android:layout_width="99dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="250dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Marilyn       "
+            android:text=""
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -51,7 +54,6 @@
             android:textSize="20sp" />
 
     </androidx.cardview.widget.CardView>
-
 
     <ImageView
         android:id="@+id/menuButton11"
