Dialog box and binding progress Bar features updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,8 @@
     <color name="colorPrimaryText">#212121</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#32CD32</color>
+    <color name="colorRed">#FF0000</color>
+
     <color name="homepageButtonsEnd">#FF2F83AA</color>
     <color name="homepageButtonsStart">#FF54C5F4</color>
 
