--- a/app/src/main/res/layout/activity_confirm_incident.xml
+++ b/app/src/main/res/layout/activity_confirm_incident.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center">
@@ -127,9 +126,11 @@
         android:id="@+id/imageView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rectangle3"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="725dp" />
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="93dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button8"
+        app:srcCompat="@drawable/rectangle3" />
 
     <ImageView
         android:id="@+id/imageView12"
