--- a/app/src/main/res/layout/activity_weekly_profiling.xml
+++ b/app/src/main/res/layout/activity_weekly_profiling.xml
@@ -111,7 +111,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounded_bg"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="Last Updated: 02/12/2022 5:20 pm"
             android:textAlignment="center"
             android:textStyle="bold"
