--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -11,7 +11,7 @@
         tools:layout="@layout/activity_patient_dashboard" />
     <fragment
         android:id="@+id/currentMedicalDiagnosticsFragment"
-        android:name="com.example.tg_patient_profile.view.patient.patientdata.healthdetails.CurrentMedicalDiagnosticsFragment"
+        android:name="com.example.tg_patient_profile.view.patient.patientdata.medicaldiagnostics.CurrentMedicalDiagnosticsFragment"
         android:label="fragment_current_medical_diagnostics"
         tools:layout="@layout/fragment_current_medical_diagnostics" />
 </navigation>
