--- a/app/src/main/res/drawable/blue_rectangle.xml
+++ b/app/src/main/res/drawable/blue_rectangle.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <padding android:left="2dp"
-        android:top="2dp"
+    <padding
+        android:bottom="2dp"
+        android:left="2dp"
         android:right="2dp"
-        android:bottom="2dp" />
+        android:top="2dp" />
     <corners android:radius="12dp" />
     <solid android:color="#0B98C5" />
 </shape>
