--- a/app/src/main/res/drawable/careplan_button.xml
+++ b/app/src/main/res/drawable/careplan_button.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:left="3dp" android:top="5dp">
+    <item
+        android:left="3dp"
+        android:top="5dp">
         <shape>
             <solid android:color="#C4C4C4" />
             <corners android:radius="15dp" />
         </shape>
     </item>
 
-    <item android:bottom="5dp" android:right="3dp">
+    <item
+        android:bottom="5dp"
+        android:right="3dp">
         <shape>
             <solid android:color="@android:color/white" />
             <corners android:radius="15dp" />
