--- a/app/src/main/res/drawable/gray_border_rectangle.xml
+++ b/app/src/main/res/drawable/gray_border_rectangle.xml
@@ -3,8 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#9F9F9F"/>
-        <corners
-            android:radius="10dp"/>
+        android:color="#9F9F9F" />
+    <corners android:radius="10dp" />
 
 </shape>
