--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#ff207d94" />
-    <padding android:left="2dp"
-        android:top="2dp"
+    <stroke
+        android:width="2dp"
+        android:color="#ff207d94" />
+    <padding
+        android:bottom="2dp"
+        android:left="2dp"
         android:right="2dp"
-        android:bottom="2dp" />
+        android:top="2dp" />
     <corners android:radius="12dp" />
     <solid android:color="#ffffffff" />
 </shape>
