--- a/app/src/main/res/drawable/rounded_bg.xml
+++ b/app/src/main/res/drawable/rounded_bg.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/gray"/>
+    <solid android:color="@color/gray" />
 
-    <padding android:left="2dp"
-        android:top="2dp"
+    <padding
+        android:bottom="2dp"
+        android:left="2dp"
         android:right="2dp"
-        android:bottom="2dp"/>
+        android:top="2dp" />
 
-    <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
+    <corners
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
 </shape>
