--- a/app/src/main/res/drawable/white_rectangle_patient_list.xml
+++ b/app/src/main/res/drawable/white_rectangle_patient_list.xml
@@ -2,7 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:useLevel="false">
-    <size android:width="64dp" android:height="12dp" />
+    <size
+        android:width="64dp"
+        android:height="12dp" />
     <solid android:color="#ffffffff" />
     <corners android:radius="30dp" />
 </shape>
