--- a/app/src/main/res/layout/fragment_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_medical_diagnostics.xml
@@ -1,93 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".view.patient.patientdata.medicaldiagnostics.MedicalDiagnosticsFragment">
-
-<androidx.cardview.widget.CardView
-    android:id="@+id/medicalDiagnosticsBodyCardView"
-    android:layout_width="0dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="@color/white"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
+    tools:context=".view.patient.patientdata.medicaldiagnostics.MedicalDiagnosticsFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/medicalDiagnosticsBodyCardView"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
+        app:cardBackgroundColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:paddingTop="10dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/medicalDiagnosticsTitleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/poppins_bold"
-                android:gravity="center"
-                android:text="Medical Diagnostics"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                tools:layout_editor_absoluteX="132dp"
-                tools:layout_editor_absoluteY="10dp" />
-
-            <Button
-                android:id="@+id/header_edit_button"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:baselineAlignBottom="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.789"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:background="@drawable/medical_diagnostics_edit" />
-
-
-        </LinearLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/medicalDiagnosticsTabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="182dp"
-            tools:layout_editor_absoluteY="373dp">
-
-        </com.google.android.material.tabs.TabLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
 
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/medicalDiagnosticsViewPager"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/medicalDiagnosticsTitleTextView"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    tools:layout_editor_absoluteX="145dp"
-                    tools:layout_editor_absoluteY="500dp" />
+                    android:fontFamily="@font/poppins_bold"
+                    android:gravity="center"
+                    android:text="Medical Diagnostics"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    tools:layout_editor_absoluteX="132dp"
+                    tools:layout_editor_absoluteY="10dp" />
+
+                <Button
+                    android:id="@+id/header_edit_button"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="@drawable/medical_diagnostics_edit"
+                    android:baselineAlignBottom="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.789"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
             </LinearLayout>
-        </ScrollView>
 
-    </LinearLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/medicalDiagnosticsTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="182dp"
+                tools:layout_editor_absoluteY="373dp">
 
-</androidx.cardview.widget.CardView>
+            </com.google.android.material.tabs.TabLayout>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/medicalDiagnosticsViewPager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:layout_editor_absoluteX="145dp"
+                        tools:layout_editor_absoluteY="500dp" />
+                </LinearLayout>
+            </ScrollView>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
