--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -1,5 +1,4 @@
-<com.google.android.material.navigation.NavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_view"
     android:layout_width="wrap_content"
