--- a/app/src/main/res/layout/update_popup.xml
+++ b/app/src/main/res/layout/update_popup.xml
@@ -7,54 +7,56 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Update"
         android:background="@color/purple_500"
-        android:textSize="25dp"
         android:gravity="center"
-        android:textColor="#FFF"/>
+        android:text="Update"
+        android:textColor="#FFF"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Name"/>
+        android:gravity="center"
+        android:text="Name"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/txtName"/>
+        android:gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Address"/>
+        android:gravity="center"
+        android:text="Address"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtAddress"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/txtAddress"/>
+        android:gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Date of Birth"/>
+        android:gravity="center"
+        android:text="Date of Birth"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/txtDoB"
@@ -75,58 +77,60 @@
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/txtPhone"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/txtPhone"/>
+        android:gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Under Care of"/>
+        android:gravity="center"
+        android:text="Under Care of"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtUnderCare"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/txtUnderCare"/>
+        android:gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Photo"/>
+        android:gravity="center"
+        android:text="Photo"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/urlPhoto"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/urlPhoto"/>
+        android:gravity="center" />
 
     <Button
+        android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
-        android:text="Update"
-        android:textSize="21sp"
-        android:textAllCaps="false"
+        android:layout_marginRight="25dp"
         android:background="@drawable/rounded"
         android:gravity="center"
-        android:id="@+id/btnUpdate"/>
+        android:text="Update"
+        android:textAllCaps="false"
+        android:textSize="21sp" />
 </LinearLayout>
