--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Dark mode theme -->
     <style name="Theme.TeamGuardians" parent="Theme.AppCompat.NoActionBar">
