--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@color/black_overlay</item>
@@ -8,6 +8,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="textAppearanceButton">@color/white</item>
     </style>
+
     <style name="poppinsfontstyle" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/poppins</item>
     </style>
@@ -36,23 +37,25 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="TabLayoutTheme" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">16sp</item>
         <item name="textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
 
     </style>
+
     <style name="TabLayoutSelectedTheme" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/TG_blue</item>
     </style>
 
 
-
     <style name="Theme.TeamGuardians.DayNight" parent="Theme.MaterialComponents.DayNight">
 
     </style>
-//dark mode
-    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen1" parent="Theme.AppCompat.Light.NoActionBar" >
+    //dark mode
+
+    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen1" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@color/dark_primary_color</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
         <item name="windowNoTitle">true</item>
@@ -61,7 +64,7 @@
         <item name="textAppearanceButton">@color/white</item>
     </style>
 
-    <style name="poppinsfontstyle1" parent="@android:style/TextAppearance.Small" >
+    <style name="poppinsfontstyle1" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/poppins</item>
     </style>
 
