--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Base application theme for light mode. -->
     <style name="Theme.TeamGuardians" parent="Theme.AppCompat.Light.NoActionBar">
